ecmascript/parser/tests/typescript-errors/tsc/references/library-reference-2/input.ts.stderr
error: Expected ';', '}' or <eof>
  --> $DIR/tests/typescript-errors/tsc/references/library-reference-2/input.ts:10:12
   |
10 |     "types": "jquery.d.ts"
   |            ^
   |
note: This is the expression part of an expression statement
  --> $DIR/tests/typescript-errors/tsc/references/library-reference-2/input.ts:10:5
   |
10 |     "types": "jquery.d.ts"
   |     ^^^^^^^

